@@ -1,3 +1,8 @@
+2003-02-17  Vince Darley <vincentdarley@sourceforge.net>
+
+	* library/vfsUtils.tcl: added beginnings of interface for
+	filesystem configuration.
+	
 2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>
 
 	* library/vfslib.tcl: fixed bug in new vfs::zstream code,
